# sudoku-solver

./: .gitignore  CMakeLists.txt  sudoku16x16  sudoku25x25  sudoku36x36  sudoku49x49  sudoku4x4
src/: bulk_allocator.c  bulk_allocator.h  dynarray.c  dynarray.h  list.c  list.h  main.c  node.c  node.h  node_offset.c  node_pointer.c  solver.c  solver.h  stack.c  stack.h  sudoku.c  sudoku_generator.c
